# ActionCollective

./: README.md
v0/: .env.example  .gitignore  docker-compose.prod.yml  docker-compose.yml
v0/backend/: Dockerfile.prod  main.py  models.py  requirements.txt  run_prod.py  weaviate_service.py
v0/client/: README.md  action_client.ipynb  pyproject.toml  requirements.txt
v0/client/action_collective/: __init__.py  client.py
v0/client/action_collective/models/: actions.py  requests.py
v0/client/action_collective/services/: backend.py  llm.py
v0/client/populate/: action_datas.json  get_tasks.py  run_tasks.py  tasks.jsonl
v0/client/tests/: manual_test.py  user_flow.py
