[tool.poetry]
name = "action-collective"
version = "0.0.1"
description = "Action Collective Client Library"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.3.5"
requests = "^2.31.0"
pydantic = "^2.5.1"
python-dotenv = "^1.0.0"
numpy = "^1.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
serpapi = "^0.1.5"
google-search-results = "^2.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"